--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Full Stack Web Developer Favian Medina Gemio clima usereffect usestate HTML, CSS, JS, PHP, MySQL, EasyUI y React. Experto en crear soluciones dinámicas y escalables.">
     <meta name="keywords" content="Full Stack Developer, Web Developer, JS, PHP, React">      
-    <title>Weather App</title>
+    <title>Weathergit App</title>
     <!-- font -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
